# CalendarMTUSI

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: main.py
src/core/: config.py  exceptions.py  logging.py
src/models/: schedule.py
src/my_calendar/: google.py
src/scraping/: auth.py  schedule_scraper.py
